--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,10 +1,10 @@
-<div class="cotainer text-color">
-  <div class="text-center mt-3">
-    <%= render "user/shared/error_messages", resource: @user %>
-  </div>
+<div class="text-center mt-3">
+  <%= render "user/shared/error_messages", resource: @user %>
+</div>
 
+<div class="cotainer text-color">
   <%= form_with model: @user, url: user_registration_path do |f| %>
-  <table class="d-flex justify-content-center" style="width: 80%; margin: auto; margin-top: 70px;">
+  <table class="d-flex justify-content-center" style="width: 80%; margin: auto; margin-top: 20px;">
     <tbody>
       <tr>
         <td class="text-center" style="font-weight: bold; font-size: 30px;">
@@ -56,7 +56,7 @@
       </tr>
       <tr>
         <td>
-          <div class="mt-5 text-center">
+          <div class="mt-4 text-center">
             <%= f.submit "会員登録", class: "btn btn-dark sign-up-button", style: "border-radius: 25px;" %>
           </div>
         </td>
@@ -65,7 +65,7 @@
   </table>
   <% end %>
 
-  <div class="row d-flex justify-content-center mt-4 ">
+  <div class="row d-flex justify-content-center mt-4 mb-4">
     <%= render "user/shared/links" %>
   </div>
 
