--- a/app/views/user/shared/_error_messages.html.erb
+++ b/app/views/user/shared/_error_messages.html.erb
@@ -1,15 +1,17 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation" data-turbo-cache="false">
-    <h2>
-      <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
-                 resource: resource.class.model_name.human.downcase)
-       %>
-    </h2>
-    <ul>
-      <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
+  <div id="error_explanation" data-turbo-cache="false" style="display: flex; justify-content: center;">
+    <div class="error-message-box w-50" style="text-align: center;">
+      <div class="text-center" style="font-weight: bold; font-size: 18px;">
+        <%= I18n.t("errors.messages.not_saved",
+                   count: resource.errors.count,
+                   resource: resource.class.model_name.human.downcase)
+         %>
+      </div>
+      <div>
+        <% resource.errors.full_messages.each do |message| %>
+          <div style="font-size: 14px;">・<%= message %></div>
+        <% end %>
+      </div>
+    </div>
   </div>
 <% end %>
