--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,10 +1,10 @@
 <% if flash[:post_success] %>
-  <div class="alert success-flash mt-4 text-center w-25 mx-auto">
+  <div class="alert success-flash mt-4 text-center w- mx-auto">
     <%= flash[:post_success] %>
   </div>
 <% end %>
 <% if flash[:post_edit_success] %>
-  <div class="alert success-flash mt-4 text-center w-25 mx-auto">
+  <div class="alert success-flash mt-4 text-center w-50 mx-auto">
     <%= flash[:post_edit_success] %>
   </div>
 <% end %>
