チャット制限エラー修正

--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,5 +1,5 @@
 <% if flash[:post_success] %>
-  <div class="alert success-flash mt-4 text-center w- mx-auto">
+  <div class="alert success-flash mt-4 text-center w-50 mx-auto">
     <%= flash[:post_success] %>
   </div>
 <% end %>
