--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,13 +89,15 @@
           </ul>
         </div>
       </div>
-
-
     </nav>
+
     <div style="text-align: right; margin-right: 150px;">
       <%= render 'layouts/search' %>
     </div>
-
     <%= yield %>
   </body>
 </html>
+
+<footer>
+  <%= render 'layouts/footer' %>
+</footer>
