--- a/app/views/user/users/followers.html.erb
+++ b/app/views/user/users/followers.html.erb
@@ -1,5 +1,5 @@
 <div class="followers-box shadow-lg"
-     style="margin: auto; border-radius: 25px; overflow: hidden; margin-top: 70px; overflow-y: auto;">
+     style="margin: auto; border-radius: 25px; overflow: hidden; margin-top: 50px; margin-bottom: 50px; overflow-y: auto;">
   <p class="text-center" style="font-weight: bold; font-size: 20px; color: #33231d;">フォロワー</p>
 
   <% @users.each do |user| %>
