--- a/app/views/user/chats/show.html.erb
+++ b/app/views/user/chats/show.html.erb
@@ -11,7 +11,7 @@
         <%= render "user/chats/chat", chat: chat %>
       <% else %>
         <div class="left-container d-flex align-items-center">
-          <%= image_tag @user.get_profile_image(40, 40), style: 'border-radius: 50%; margin-top: 0;' %>
+          <%= image_tag @user.get_profile_image(40, 40), style: 'border-radius: 50%;' %>
           <p class="ml-2 mb-0" style="text-align: left;">
             <span class="their-message mt-2"
               style="padding: 5px 10px; border-radius: 25px; display: inline-block; vertical-align: middle;">
