--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -65,57 +65,12 @@
   </table>
   <% end %>
 
-  <div class="row d-flex justify-content-center mt-4 mb-4">
+  <div class="row d-flex justify-content-center mt-4" style="margin-bottom: 80px;">
     <%= render "user/shared/links" %>
   </div>
 
 </div>
 
 
-
-
-
-<!--<div class="cotainer">-->
-<!--  <h2 class="d-flex justify-content-center mt-5" style="font-weight: bold; font-size: 30px;">-->
-<!--  会員登録<i class="fa-solid fa-user-plus ml-1"></i></h2>-->
-
-<!--    <div class="row d-flex justify-content-center mt-3">-->
-<!--      <%= form_with model: @user, url: user_registration_path do |f| %>-->
-<!--        <%= render "user/shared/error_messages", resource: resource %>-->
-
-<!--        <div class="field">-->
-<!--          <%= f.label :name %><br />-->
-<!--          <%= f.text_field :name, autofocus: true, autocomplete: "name" %>-->
-<!--        </div>-->
-
-<!--        <div class="field">-->
-<!--          <%= f.label :email %><br />-->
-<!--          <%= f.email_field :email, autocomplete: "email" %>-->
-<!--        </div>-->
-
-<!--        <div class="field">-->
-<!--          <%= f.label :password %>-->
-<!--          <% if @minimum_password_length %>-->
-<!--          <em>(<%= @minimum_password_length %> characters minimum)</em>-->
-<!--          <% end %><br />-->
-<!--          <%= f.password_field :password, autocomplete: "new-password" %>-->
-<!--        </div>-->
-
-<!--        <div class="field">-->
-<!--          <%= f.label :password_confirmation %><br />-->
-<!--          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>-->
-<!--        </div>-->
-
-<!--        <div class="actions mt-3">-->
-<!--          <%= f.submit "会員登録" %>-->
-<!--        </div>-->
-<!--      <% end %>-->
-<!--    </div>-->
-
-    <!--<div class="row d-flex justify-content-center mt-3">-->
-    <!--  <%= render "user/shared/links" %>-->
-    <!--</div>-->
-
-<!--  </div>-->
 
 
