--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="shadow-lg card mb-5 mt-5" style="width: 60%; margin: auto; border-radius: 25px; overflow: hidden;">
+<div class="shadow-lg card" style="width: 60%; margin: auto; border-radius: 25px; overflow: hidden; margin-top: 40px; margin-bottom: 70px;">
   <div class="card-header d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center">
       <%= link_to admin_user_path(@post.user) do %>
