--- a/app/views/user/chats/create.js.erb
+++ b/app/views/user/chats/create.js.erb
@@ -1,2 +1,11 @@
 $('.message').append('<%= j(render "user/chats/chat", chat: @chat) %>');
 $('input[type=text]').val("")
+
+document.querySelector('.message-text-area').value = '';
+
+<!--const latestMessageId = 'chat_<!%= @chat.id %>';-->
+<!--const latestMessageElement = document.getElementById(latestMessageId);-->
+<!--if (latestMessageElement) {-->
+<!--  latestMessageElement.scrollIntoView({ behavior: 'smooth' });-->
+<!--  latestMessageElement.focus();-->
+<!--}-->
