--- a/app/views/user/chats/show.html.erb
+++ b/app/views/user/chats/show.html.erb
@@ -12,9 +12,8 @@
       <% else %>
         <div class="left-container d-flex align-items-center">
           <%= image_tag @user.get_profile_image(40, 40), style: 'border-radius: 50%;' %>
-          <p class="ml-2 mb-0" style="text-align: left;">
-            <span class="their-message mt-2"
-              style="padding: 5px 10px; border-radius: 25px; display: inline-block; vertical-align: middle;">
+          <p class="ml-2 mb-3" style="text-align: left;">
+            <span class="their-message mt-2">
               <%= chat.message %>
             </span>
           </p>
@@ -23,13 +22,15 @@
     <% end %>
   </div>
 
-  <div style="position: absolute; bottom: 10px; right: 32px; width: calc(100% - 20px;">
+  <div style="position: absolute; bottom: 15px; right: 32px; width: calc(100% - 20px;">
     <%= form_with model: @chat, data: {remote: true} do |f| %>
-      <%= f.text_field :message, style: "width: 390px;" %>
-      <%= button_tag(type: 'submit', class: "btn btn-sm message-send-button mb-1", style: "width: 45px;") do %>
-        <i class="fa-solid fa-paper-plane"></i>
-      <% end %>
-      <%= f.hidden_field :room_id %>
+      <div style="display: flex; align-items: center;">
+        <%= f.text_area :message, class: "message-text-area", rows: 1 %>
+        <%= button_tag(type: 'submit', class: "btn btn-sm message-send-button ml-2 mb-1", style: "width: 45px;") do %>
+          <i class="fa-solid fa-paper-plane"></i>
+        <% end %>
+        <%= f.hidden_field :room_id %>
+      </div>
     <% end %>
   </div>
 </div>
