本番環境レイアウト調整

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -209,6 +209,8 @@
   word-wrap: break-word;
   overflow-wrap: break-word;
   white-space: normal;
+  display: flex;
+  align-items: center;
 }
 
 .their-message {
@@ -222,6 +224,8 @@
   word-wrap: break-word;
   overflow-wrap: break-word;
   white-space: normal;
+  display: flex;
+  align-items: center;
 }
 
 .message-delete-button {
