実装フェーズ3完了

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -218,6 +218,8 @@
   padding: 5px 10px;
   border-radius: 25px;
   max-width: 80%;
+  display: inline-block;
+  vertical-align: middle;
   word-wrap: break-word;
   overflow-wrap: break-word;
   white-space: normal;
