実装フェーズ3完了

--- a/app/views/user/post_comments/_index.html.erb
+++ b/app/views/user/post_comments/_index.html.erb
@@ -3,7 +3,7 @@
   <tr>
     <td>
       <%= link_to user_path(post_comment.user) do %>
-        <%= image_tag post_comment.user.get_profile_image(30, 30), class: "rounded-circle" %>
+        <%= image_tag post_comment.user.get_profile_image(30, 30), class: "rounded-circle mr-1" %>
       <% end %>
     </td>
     <td class="ml-3">
