--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -38,7 +38,7 @@
       <tr>
         <td>
           <%= link_to admin_user_path(post_comment.user) do %>
-            <%= image_tag post_comment.user.get_profile_image(30, 30), class: "rounded-circle" %>
+            <%= image_tag post_comment.user.get_profile_image(30, 30), class: "rounded-circle mr-1" %>
           <% end %>
         </td>
         <td class="ml-3">
