--- a/app/views/user/chats/show.html.erb
+++ b/app/views/user/chats/show.html.erb
@@ -5,7 +5,7 @@
     <span class="text-color" style="font-weight: bold; font-size: 20px; margin-left: 10px;"><%= @user.name %></span>
   <% end %>
 
-  <div class="message mt-3" style="width: 470px; max-height: calc(100% - 100px); overflow-y: auto;">
+  <div class="message mt-3" style="width: 100%; max-height: calc(100% - 100px); overflow-y: auto;">
     <% @chats.each do |chat| %>
       <% if chat.user_id == current_user.id %>
         <%= render "user/chats/chat", chat: chat %>
@@ -26,7 +26,7 @@
     <%= form_with model: @chat, data: {remote: true} do |f| %>
       <div style="display: flex; align-items: center;">
         <%= f.text_area :message, class: "message-text-area", rows: 1 %>
-        <%= button_tag(type: 'submit', class: "btn btn-sm message-send-button ml-2 mb-1", style: "width: 45px;") do %>
+        <%= button_tag(type: 'submit', class: "btn btn-sm message-send-button ml-2 mb-1") do %>
           <i class="fa-solid fa-paper-plane"></i>
         <% end %>
         <%= f.hidden_field :room_id %>
