--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -10,55 +10,49 @@
   </div>
 <% end %>
 
-<div class="container" style="width: 50%;" >
-  <div class="d-flex justify-content-between align-items-center mt-5 mb-5">
+<div class="container" style="max-width: 100%;" >
+  <div class="d-flex justify-content-center mt-5 mb-5">
     <div style="font-weight: bold; font-size: 30px;">
       <i class="fa-solid fa-map-pin" style="color: #33231d;"></i> <span style="color: #33231d;">みんなの投稿</span>
     </div>
-    <%= link_to new_post_path do %>
-      <button class="btn btn-dark btn-lg top-post-new-button" style="border-radius: 50px;">
-        <strong style="font-size: 30px;">投稿を作成する</strong> <i class="fa-solid fa-pen"></i>
-      </button>
+  </div>
+</div>
+
+
+<% @posts.each do |post| %>
+  <div class="card top-post-card shadow text-color mb-3" style="border-radius: 25px;">
+    <% if post.post_image.attached? %>
+      <%= image_tag post.post_image, class: "card-img-top", style: "width: 100%;" %>
+    <% else %>
+      <%= image_tag 'no_image2.png', class: "card-img-top", style: "width: 100%;" %>
     <% end %>
+    <div class="card-body">
+      <h5 class="card-title" style="font-weight: bold; font-size: 20px;"><%= post.title %></h5>
+      <p>
+        <%= link_to user_path(post.user) do %>
+          <%= image_tag post.user.get_profile_image(40, 40), class: "rounded-circle" %>
+          <span style="font-weight: bold; margin-right: 5px; color: #33231d;"><%= post.user.name %></span>
+        <% end %>
+        <i class="fa-regular fa-clock"></i> 投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %>
+      </p>
+      <p class="card-text"><%= post.body %></p>
+      <p class="card-text">
+        <div class="d-flex justify-content-between align-items-center">
+          <%= link_to post_path(post.id) do %>
+            <button class="btn btn-dark button" style="border-radius: 25px;">詳細を見る</button>
+          <% end %>
+          <div class="d-flex align-items-center mr-3">
+            <div id="like_btn_<%= post.id %>">
+              <%= render 'user/likes/btn', post: post %>
+            </div>
+            <i class="fa-regular fa-comment-dots fa-2x ml-4 mr-2" style="color: #33231d;"></i>
+            <span style="font-size: 24px; color: #33231d;"><%= post.post_comments.count %></span>
+          </div>
+        </div>
+      </p>
     </div>
   </div>
-
-
-  <% @posts.each do |post| %>
-    <div class="shadow card mb-3 text-color"
-         style="width: 50%; margin: auto; margin-top: 20px; border-radius: 25px; overflow: hidden;">
-      <% if post.post_image.attached? %>
-        <%= image_tag post.post_image, class: "card-img-top", style: "width: 100%;" %>
-      <% else %>
-        <%= image_tag 'no_image2.png', class: "card-img-top", style: "width: 100%;" %>
-      <% end %>
-      <div class="card-body">
-        <h5 class="card-title" style="font-weight: bold; font-size: 20px;"><%= post.title %></h5>
-        <p>
-          <%= link_to user_path(post.user) do %>
-            <%= image_tag post.user.get_profile_image(40, 40), class: "rounded-circle" %>
-            <span style="font-weight: bold; margin-right: 5px; color: #33231d;"><%= post.user.name %></span>
-          <% end %>
-          <i class="fa-regular fa-clock"></i> 投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %>
-        </p>
-        <p class="card-text"><%= post.body %></p>
-        <p class="card-text">
-          <div class="d-flex justify-content-between align-items-center">
-            <%= link_to post_path(post.id) do %>
-              <button class="btn btn-dark button" style="border-radius: 25px;">詳細を見る</button>
-            <% end %>
-            <div class="d-flex align-items-center mr-3">
-              <div id="like_btn_<%= post.id %>">
-                <%= render 'user/likes/btn', post: post %>
-              </div>
-              <i class="fa-regular fa-comment-dots fa-2x ml-4 mr-2" style="color: #33231d;"></i>
-              <span style="font-size: 24px; color: #33231d;"><%= post.post_comments.count %></span>
-            </div>
-          </div>
-        </p>
-      </div>
-    </div>
-  <% end %>
+<% end %>
 
 
 <div class="pagination d-flex justify-content-center mt-5 mb-5">
