--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -9,7 +9,7 @@
   </div>
 <% end %>
 
-<div class="shadow-lg card text-color" style="width: 60%; margin: auto; border-radius: 25px; overflow: hidden; margin-top: 40px; margin-bottom: 70px; ">
+<div class="card post-show-card shadow-lg text-color" style="border-radius: 25px;">
   <div class="card-header d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center">
       <%= link_to user_path(@post.user) do %>
