--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,8 +37,8 @@
               </li>
               <li class="nav-item">
                 <%= link_to new_post_path, class: "nav-link" do %>
-                  <button class="btn btn-outline-dark header-button" style="border-radius: 25px;">
-                    新規投稿
+                  <button class="btn btn-outline-dark header-post-new-button" style="border-radius: 25px;">
+                    新規投稿 <i class="fa-solid fa-pen"></i>
                   </button>
                 <% end %>
               </li>
