mypage,user/showレスポンシブ対応

--- a/app/views/user/users/confirm.html.erb
+++ b/app/views/user/users/confirm.html.erb
@@ -1,4 +1,4 @@
-<div class="conrainer text-color d-flex align-items-center justify-content-center full-height">
+<div class="container text-color d-flex align-items-center justify-content-center full-height">
   <table>
     <tr>
       <td class="text-center">
