--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -107,17 +107,29 @@
   background-color: #ed9f82 !important; /* ホバー時の背景色 */
 }
 
-.post-edit-button, .follow-button, .search-to-chat-button {
+.follow-button, .search-to-chat-button {
   background-color: #eeeed3 !important;
   border: 2px solid #33231d !important;
   color: #33231d !important;
   width: 145px;
 }
 
-.post-edit-button:hover, .follow-button:hover, .search-to-chat-button:hover, .following-button{
+.follow-button:hover, .search-to-chat-button:hover, .following-button{
   background-color: #33231d !important;
   color: #eeeed3 !important;
   width: 145px;
+}
+
+.post-edit-button {
+  background-color: #eeeed3 !important;
+  border: 2px solid #33231d !important;
+  color: #33231d !important;
+  width: 145px;
+}
+
+.post-edit-button:hover {
+  background-color: #33231d !important;
+  color: #eeeed3 !important;
 }
 
 .post-delete-button {
@@ -276,6 +288,49 @@
   background-color: #33231d;
 }
 
+.liked-posts-heading {
+  font-weight: bold;
+  font-size: 25px;
+  color: #33231d;
+}
+
+.liked-posts-table {
+  width: 50%;
+  margin: auto;
+  margin-top: 30px;
+}
+
+.liked-posts-title {
+  font-weight: bold;
+  font-size: 18px
+}
+
+.mypage-profile-table, .user-profile-table {
+  margin: auto;
+  width: 50%;
+  max-width: 800px;
+}
+
+.mypage-posts-table, .user-posts-table {
+  margin: auto;
+  width: 60%;
+  margin-top: 20px;
+}
+
+.mypage-posts-title {
+  font-weight: bold;
+  font-size: 20px
+}
+
+.user-posts-title {
+  font-weight: bold;
+  font-size: 20px
+}
+
+.profile-item {
+  font-size: 20px;
+}
+
 .pagination li {
     margin: 0 5px;
 }
@@ -314,50 +369,50 @@
 
 @media screen and (max-width:576px) {
     .custom-container {
-        padding-left: 0;
-        padding-right: 0;
+      padding-left: 0;
+      padding-right: 0;
     }
 
     .search-container {
-        margin: 0 20px 0 0;
+      margin: 0 20px 0 0;
     }
 
     .search-form {
-        align-items: stretch;
-        display: flex;
-        justify-content: center;
+      align-items: stretch;
+      display: flex;
+      justify-content: center;
     }
 
     .chat-box {
-        padding: 20px;
-        width: 350px;
-        margin: auto;
+      padding: 20px;
+      width: 350px;
+      margin: auto;
     }
 
     .message-text-area {
-        width: 250px;
-        height: 30px;
-        overflow-y: auto;
-        border-radius: 5px;
-        display: flex; /* フレックスボックスを使用 */
-        justify-content: center; /* 中央寄せ */
-        align-items: center; /* 縦方向中央寄せ */
+      width: 250px;
+      height: 30px;
+      overflow-y: auto;
+      border-radius: 5px;
+      display: flex; /* フレックスボックスを使用 */
+      justify-content: center; /* 中央寄せ */
+      align-items: center; /* 縦方向中央寄せ */
     }
 
     .my-message {
-        font-size: 10px;
-        max-width: 250px;
-        word-wrap: break-word;
-        overflow-wrap: break-word;
-        white-space: normal;
+      font-size: 10px;
+      max-width: 250px;
+      word-wrap: break-word;
+      overflow-wrap: break-word;
+      white-space: normal;
     }
 
     .their-message {
-        font-size: 10px;
-        max-width: 250px;
-        word-wrap: break-word;
-        overflow-wrap: break-word;
-        white-space: normal;
+      font-size: 10px;
+      max-width: 250px;
+      word-wrap: break-word;
+      overflow-wrap: break-word;
+      white-space: normal;
     }
 
     .message-send-button {
@@ -390,13 +445,13 @@
       background-color: #eeeed3 !important;
       border: 2px solid #33231d !important;
       color: #33231d !important;
-      width: 110px;
+      width: 145px;
     }
 
     .follow-button:hover, .search-to-chat-button:hover, .following-button{
       background-color: #33231d !important;
       color: #eeeed3 !important;
-      width: 110px !important;
+      width: 145px !important;
     }
 
     .search-user-button-text {
@@ -414,6 +469,51 @@
       padding: 0;
       margin: 0;
     }
+
+    .liked-posts-heading {
+      font-weight: bold;
+      font-size: 20px;
+      color: #33231d;
+    }
+
+    .liked-posts-table {
+      width: 80%;
+      margin: auto;
+      margin-top: 30px;
+    }
+
+    .liked-posts-title {
+      font-weight: bold;
+      font-size: 12px
+    }
+
+    .mypage-profile-table, .user-profile-table {
+      margin: auto;
+      width: 80%;
+    }
+
+    .mypage-posts-table, .user-posts-table {
+      margin: auto;
+      width: 80%;
+      margin-top: 20px;
+    }
+
+    .mypage-posts-title, .user-posts-title {
+      font-weight: bold;
+      font-size: 12px
+    }
+
+    .profile-item {
+      font-size: 12px;
+    }
+
+    .user-show-following-button-text,
+    .user-show-follow-button-text,
+    .user-show-chat-button-text {
+      font-size: 12px;
+    }
+
+
 
 
 
