--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -28,20 +28,20 @@
         <% if user_signed_in? && current_user.following?(@user) %>
           <%= link_to user_relationships_path(@user.id), method: :delete do%>
             <button class="btn following-button mt-2" style="border-radius: 25px; width: 145px;">
-              <span class="user-show-following-button-text">フォロー中 <i class="fa-solid fa-user-check"></i></span>
+              フォロー中 <i class="fa-solid fa-user-check"></i>
             </button>
           <% end %>
         <% else %>
           <%= link_to user_relationships_path(@user.id), method: :post do%>
             <button class="btn follow-button mt-2" style="border-radius: 25px; width: 145px;">
-              <span class="user-show-follow-button-text">フォロー <i class="fa-solid fa-user-plus"></i></span>
+              フォロー <i class="fa-solid fa-user-plus"></i>
             </button>
           <% end %>
         <% end %>
         <% if user_signed_in? && current_user != @user && current_user.following?(@user) && @user.following?(current_user) %>
           <%= link_to chat_path(@user.id) do %>
             <button class="btn btn-outline-dark post-edit-button mt-2 ml-1" style="border-radius: 25px; width: 145px;">
-              <span class="user-show-chat-button-text">チャット <i class="fa-solid fa-comment-dots"></i></span>
+              チャット <i class="fa-solid fa-comment-dots"></i>
             </button>
           <% end %>
         <% end %>
